--- a/Angular14-Masterclass/Section1/assignment01/angular.json
+++ b/Angular14-Masterclass/Section1/assignment01/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "assignment01": {
+    "my_second_app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/assignment01",
+            "outputPath": "dist/my_second_app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,10 +69,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "assignment01:build:production"
+              "browserTarget": "my_second_app:build:production"
             },
             "development": {
-              "browserTarget": "assignment01:build:development"
+              "browserTarget": "my_second_app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +80,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "assignment01:build"
+            "browserTarget": "my_second_app:build"
           }
         },
         "test": {
